--- a/pickle_embedding.ipynb
+++ b/pickle_embedding.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pickle_embedding.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWX1YtP8dS0kJwjRUzDtgw",
+      "authorship_tag": "ABX9TyNmUKHAfw1D2Q5ve3o55mlp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,6 +156,19 @@
           },
           "execution_count": 14
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xy4Wg4UDfGVN"
+      },
+      "source": [
+        "The [recommended practice](https://pytorch.org/tutorials/beginner/saving_loading_models.html#what-is-a-state-dict) is: \n",
+        "\n",
+        "```\n",
+        "model.load_state_dict(torch.load(PATH))\n",
+        "```\n"
       ]
     }
   ]
